deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: yc
  name: deployment-yc-fps
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: yc-fps
  replicas: 1 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yc-fps
        workload: yc
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: yc-fps
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "350m"       # 至少預留 0.5 個 vCPU
            memory: "1000Mi"   # 至少預留 512Mi 記憶體
          limits:
            cpu: "350m"      # 最多使用 1 個 vCPU
            memory: "1500Mi"     # 最多使用 1Gi 記憶體
        volumeMounts:
        - name: w3clog-volume
          mountPath: /data/w3clog
      volumes:
      - name: w3clog-volume
        hostPath:
          path: /var/log/containers/yc_fps/w3clog
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: workload
                operator: In
                values:
                  - yc
