deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: service-yc-fps
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP 
  selector:
    app.kubernetes.io/name: yc-fps
