deployment/nginx_test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: deployment-nginx-test
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-nginx-test
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-nginx-test
    spec:
      containers:
      - image: 861276125286.dkr.ecr.ap-northeast-1.amazonaws.com/argocd/test:v1
        imagePullPolicy: Always
        name: app-nginx-test
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: service-nginx-test
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-nginx-test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: ingress-nginx-test
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-nginx-test
              port:
                number: 80
