deployment/y_f.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: yc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: yc
  name: deployment-yc-fps
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: yc-fps
  replicas: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yc-fps
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: yc-fps
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "350m"       # 至少預留 0.5 個 vCPU
            memory: "1000Mi"   # 至少預留 512Mi 記憶體
          limits:
            cpu: "350m"      # 最多使用 1 個 vCPU
            memory: "1500Mi"     # 最多使用 1Gi 記憶體
        volumeMounts:
        - name: w3clog-volume
          mountPath: /data/w3clog
      volumes:
      - name: w3clog-volume
        hostPath:
          path: /var/log/containers/yc_fps/w3clog
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: workload
                operator: In
                values:
                  - yc

      template:
        metadata:
          labels:
            workload: yc
---
apiVersion: v1
kind: Service
metadata:
  namespace: yc
  name: service-yc-fps
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: yc-fps
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: yc
  name: ingress-yc-fps
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-yc-fps
              port:
                number: 80
